deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-logger
  labels:
    app.kubernetes.io/name: event-logger
    app.kubernetes.io/instance: events
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: event-logger
      app.kubernetes.io/instance: events
  template:
    metadata:
      labels:
        app.kubernetes.io/name: event-logger
        app.kubernetes.io/instance: events
    spec:
      containers:
        - name: event-logger
          image: "betorvs/event-logger:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /event-logger/v1/health
              port: 9090
          readinessProbe:
            httpGet:
              path: /event-logger/v1/health
              port: 9090
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: event-logger
  labels:
    app.kubernetes.io/name: event-logger
    app.kubernetes.io/instance: events
spec:
  rules:
    - host: "events.example.local"
      http:
        paths:
          - path: /event-logger/v1
            backend:
              serviceName: event-logger
              servicePort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: event-logger
  labels:
    app.kubernetes.io/name: event-logger
    app.kubernetes.io/instance: events
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: event-logger
    app.kubernetes.io/instance: events
